[package]
name = "uploader"
version = "0.1.0"
authors = ["Alex Gievsky <alex.gievsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
futures-util = "0.3"