[package]
name = "uploader"
version = "0.1.0"
authors = ["Alex Gievsky <alex.gievsky@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5" }
axum-server = { version = "0.6", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# crypto
sha2 = { version = "0.10" }

# randomness
rand = { version = "0.8.5" }
getrandom = { version = "0.2.14", features = ["js"] }

# encoding
base64 = { version = "0.13" }